--- a/index(动).html
+++ b/index(动).html
@@ -175,7 +175,7 @@
     <div class="page home">
         <div class="page_hd">
             <h1 class="page_title">
-                <img src="image/log1o.png" alt="" height="21">
+                <img src="image/logo.png" alt="" height="21">
             </h1>
             <p class="page_desc">
                 WeUI 是一套同微信原生视觉体验一致的基础样式库，由微信官方设计团队为微信内网页和微信小程序量身设计，令用户的使用感知更加统一。
