--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             height: 30px;
         }
         .page.home .page_category{
-            height:0;
-            overflow: hidden;
+            /*height:0;*/
+            /*overflow: hidden;*/
         }
         .cells{
             position: relative;
