--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
             bottom: 0;
         }
         .container{
-            overflow: hidden;
+            /*overflow: hidden;*/
         }
         .page{
             overflow-y: auto;
             overflow-scrolling: touch;
             -webkit-overflow-scrolling: touch;
             background-color: #f8f8f8;
+            /*border: 1px solid black;*/
         }
         .page .page_hd{
             padding: 40px;
